--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -19,7 +19,7 @@
         <h5 class="text-uppercase mb-0">Bog'lanish</h5>
         <ul class="list-unstyled">
           <li><a href="#" class="text-dark">+998 90 123 45 67</a></li>
-          <li><a href="#" class="text-dark">info@meningdokonim.uz</a></li>
+          <li><a href="{% url 'home' %}" class="text-dark">info@meningdokonim.uz</a></li>
         </ul>
       </div>
     </div>
