--- a/templates/products/product-list.html
+++ b/templates/products/product-list.html
@@ -8,7 +8,7 @@
             {% for product in products %}
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="{{ product.image.url }}" class="card-img-top" alt="Mahsulot 1">
+                        <img src="{{ product.image.url }}" height="450px" class="card-img-top" alt="{{ product.product_title }}">
                         <div class="card-body">
                             <h5 class="card-title">{{ product.product_title }}</h5>
                             <p class="card-text">{{ product.description }}</p>
@@ -17,6 +17,7 @@
                     </div>
                 </div>
             {% endfor %}
+
         </div>
     </div>
 {% endblock %}
